--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,9 +24,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="http://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+      type="text/css"
+    />
     <title>React App</title>
   </head>
   <body>
+    <style>
+      body {
+        font-family: "Roboto", sans-serif;
+        font-size: 48px;
+      }
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
